fix: menu on iOS

--- a/src/components/layout/layout.module.scss
+++ b/src/components/layout/layout.module.scss
@@ -27,13 +27,19 @@
   width: 100%;
   transition: $menu-transition-duration;
 
+  @include mq($until: tablet) {
+    position: fixed;
+    top: $header-height;
+  }
+
   &.menuOpen {
-    margin-top: $menu-height-mobile;
     height: calc(100vh - #{$header-height} - #{$menu-height-mobile});
+    top: calc(#{$header-height} + #{$menu-height-mobile});
 
     @include mq($from: tablet) {
       margin-top: calc(#{size(8)} - 1px);
       height: calc(100vh - #{$header-height} - #{$menu-height-desktop});
+      top: unset;
     }
   }
 
